--- a/packages/crypto-utils/package.json
+++ b/packages/crypto-utils/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@monstrs/buffer-utils",
-  "version": "0.0.2",
+  "name": "@monstrs/crypto-utils",
+  "version": "0.0.1",
   "license": "MIT",
   "type": "module",
   "exports": {
@@ -16,12 +16,8 @@
     "prepack": "yarn run build",
     "postpack": "rm -rf dist"
   },
-  "dependencies": {
-    "@monstrs/bigint-utils": "workspace:0.0.1"
-  },
   "devDependencies": {
-    "@jest/globals": "^29.7.0",
-    "@types/node": "^20.9.0"
+    "@jest/globals": "^29.7.0"
   },
   "publishConfig": {
     "exports": {
